--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.5.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "https-proxy-agent": "^7.0.2",
     "next": "13.5.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
