--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "cors-proxy": "^1.0.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "ffmpeg-static": "^5.2.0",
