--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.5.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
     "react-h5-audio-player": "^3.8.6",
     "tailwindcss": "3.3.3",
